--- a/clojurescript/README
+++ b/clojurescript/README
@@ -1,13 +1,1 @@
-# wascal
-
-FIXME: write description
-
-## Usage
-
-FIXME: write
-
-## License
-
-Copyright (C) 2012 FIXME
-
-Distributed under the Eclipse Public License, the same as Clojure.
+Code for assessing writing quality from ClojureScript.
